--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - run: echo oluwatola
+      - run: echo $my_env_var
 
 
 # Invoke jobs via workflows
