--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,42 +1,18 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
+commands:
+  print_pipeline_id:
+    steps:
+      - run: echo ${CIRCLE_WORKFLOW_ID}
+
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-    docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
-    steps:
-      - checkout
-      - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
-  print-hello:
+  my_job:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - run: echo hello
+      - print_pipeline_id
 
-  print-world:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - run: echo world
-
-
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  say-hello-workflow:
+  my_workflow:
     jobs:
-      - say-hello
-      - print-hello
-      - print-world:
-        requires:
-         - print-hello
+      - my_job
