--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - print_pipeline_i
+      - print_pipeline_id
   
   error_job:
     docker:
@@ -25,4 +25,5 @@ jobs:
 workflows:
   my_workflow:
     jobs:
+      - my_job
       - error_job
